<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="set_wallpaper_button"
        android:title="@string/pref_set_button" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="update_enabled"
        android:title="@string/pref_update_enabled" />

    <EditTextPreference
        android:defaultValue="1000"
        android:dependency="update_enabled"
        android:digits="0123456789"
        android:inputType="number"
        android:key="update_freq"
        android:summary="@string/pref_update_freq_sum"
        android:title="@string/pref_update_freq"
        android:visibility="visible"/>

    <ListPreference
        android:defaultValue="hour_marks"
        android:entries="@array/clockTypes"
        android:entryValues="@array/clockTypeAlias"
        android:key="clock_type"
        android:summary="%1$s"
        android:title="@string/pref_clock_type" />

    <Preference
        android:title="Color Preferences"
        app:fragment="com.github.rodrigodd.fractalclock.FractalClockPreferencesActivity$FractalClockColorPreferenceFragment" />

    <SeekBarPreference
        android:defaultValue="20"
        android:key="clock_scale"
        android:max="40"
        android:title="@string/pref_clock_scale"
        app:showSeekBarValue="false"
        app:updatesContinuously="true" />

    <SeekBarPreference
        android:defaultValue="12"
        android:key="fractal_deep"
        android:max="18"
        android:title="@string/pref_fractal_deep"
        app:min="1"
        app:showSeekBarValue="true"
        app:updatesContinuously="true" />

    <Preference
        android:key="save_wallpaper_button"
        android:title="@string/pref_save_button" />

</androidx.preference.PreferenceScreen>